# chaoschain

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
configs/: demo.character.json  genesis_block.txt
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  web.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs  manager.rs  validator.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  mempool.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: lib.rs
crates/producer/: Cargo.toml
crates/producer/src/: bridge.rs  lib.rs  mempool.rs  network.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
docs/: AI_AGENTS.md  API.md  ARCHITECTURE.md  BRIDGE.md  CONTRIBUTING.md  CUSTOM_AGENTS.md  OriginalProposal.md  QUICKSTART.md
src/: agent.rs  main.rs  web.rs
src/producer/: producer.rs
src/validator/: validator.rs
static/: index.html
web/: index.html
