[package]
name = "chaoschain-consensus"
version = "0.1.0"
edition = "2021"
authors = ["ChaosChain Contributors"]

[dependencies]
# Internal dependencies
chaoschain-core = { path = "../core" }
chaoschain-p2p = { path = "../p2p" }

# Async runtime
tokio = { workspace = true }

# AI/LLM integration
async-openai = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Cryptography
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }

# Logging
tracing = { workspace = true } 