[package]
name = "chaoschain-p2p"
version = "0.1.0"
edition = "2021"
authors = ["ChaosChain Contributors"]

[dependencies]
# Internal dependencies
chaoschain-core = { path = "../core" }

# P2P networking
libp2p = { version = "0.53", features = ["tokio", "tcp", "noise", "gossipsub", "mdns", "yamux"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true } 